# STM32-CMake-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build_cmake.sh  makefile
STM32F446RE/: CMakeLists.txt
STM32F446RE/linker/: STM32F446RETX_FLASH.ld
cmake/: ARM_toolchain.cmake
src/: main.c
